fix: packages names

--- a/growbit-wallet/app.json
+++ b/growbit-wallet/app.json
@@ -15,13 +15,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "org.growbit.growbit-wallet"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "org.growbit.growbit_wallet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
