fix: ios table not supported

--- a/growbit-wallet/app.json
+++ b/growbit-wallet/app.json
@@ -15,7 +15,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "org.growbit.growbit-wallet"
     },
     "android": {
