--- a/growbit-wallet/package.json
+++ b/growbit-wallet/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas": "eas"
   },
   "dependencies": {
     "expo": "~48.0.18",
@@ -15,7 +16,8 @@
     "react-native": "0.71.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eas-cli": "^3.17.0"
   },
   "private": true
 }
